--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.*",
+    "is-valid-http-url": "^1.0.3",
     "socket.io": "^2.*"
   },
   "bugs": {
