--- a/backend/package.json
+++ b/backend/package.json
@@ -21,7 +21,9 @@
   "dependencies": {
     "express": "^4.*",
     "is-valid-http-url": "^1.0.3",
-    "socket.io": "^2.*"
+    "node-html-parser": "^1.2.20",
+    "socket.io": "^2.*",
+    "url-parse": "^1.4.7"
   },
   "bugs": {
     "url": "https://github.com/faelkeller/tenka/issues"
